--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Memphis Burger - Home</title>
 </head>
 <body>
@@ -16,8 +16,8 @@
             
             <div class="container-fluid d-flex align-items-center">
                 <!-- Logo -->
-                <a class="navbar-brand mx-auto mx-md-5" href="/index.html">
-                    <img src="/img/main-logo1.png" alt="Logo" style="height: 125px;">
+                <a class="navbar-brand mx-auto mx-md-5" href="index.html">
+                    <img src="img/main-logo1.png" alt="Logo" style="height: 125px;">
                 </a>
 
                 <!-- boton del menu para dispositivos moviles -->
@@ -29,23 +29,23 @@
                 <div class="collapse navbar-collapse justify-content-end mx-5" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html" style="color: darkblue;">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html" style="color: darkblue;">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/menu.html">Menu</a>
+                            <a class="nav-link" href="pages/menu.html">Menu</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/blog.html">Blog</a>
+                            <a class="nav-link" href="pages/blog.html">Blog</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/clientes.html">Nuestros clientes</a>
+                            <a class="nav-link" href="pages/clientes.html">Nuestros clientes</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
