--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Memphis Burger - Blog</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <div class="container-fluid d-flex align-items-center">
                 <!-- Logo -->
                 <a class="navbar-brand mx-auto mx-md-5" href="/index.html">
-                    <img src="/img/main-logo1.png" alt="Logo" style="height: 125px;">
+                    <img src="../img/main-logo1.png" alt="Logo" style="height: 125px;">
                 </a>
 
                 <!-- boton del menu para dispositivos moviles -->
