--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container-fluid d-flex align-items-center">
                 <!-- Logo -->
                 <a class="navbar-brand mx-auto mx-md-5" href="index.html">
-                    <img src="img/main-logo1.png" alt="Logo" style="height: 125px;">
+                    <img src="/memphis-burger/img/main-logo1.png" alt="Logo" style="height: 125px;">
                 </a>
 
                 <!-- boton del menu para dispositivos moviles -->
