ajuste de texto de pagina principal y correcion de estilos

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -13,15 +13,15 @@
         <nav class="navbar navbar-expand-lg">
             
             <div class="container-fluid d-flex align-items-center">
-                <!-- Logo -->
-                <a class="navbar-brand mx-auto mx-md-5" href="../index.html">
-                    <img src="../img/main-logo1.png" alt="Logo" style="height: 125px;">
-                </a>
-
                 <!-- boton del menu para dispositivos moviles -->
                 <button class="navbar-toggler custombotton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <!-- Logo -->
+                <a class="navbar-brand mx-sm-auto mx-md-auto mx-auto mx-md-5" href="../index.html">
+                    <img src="../img/main-logo1.png" alt="Logo" style="height: 125px;">
+                </a>
 
                 <!-- menu de navegacion para pantallas grandes -->
                 <div class="collapse navbar-collapse justify-content-end mx-5" id="navbarSupportedContent">
