--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Memphis Burger - Home</title>
@@ -15,15 +16,16 @@
         <nav class="navbar navbar-expand-lg">
             
             <div class="container-fluid d-flex align-items-center">
-                <!-- Logo -->
-                <a class="navbar-brand mx-auto mx-md-5" href="index.html">
-                    <img src="img/main-logo1.png" alt="Logo principal Memphis Burger" style="height: 125px;">
-                </a>
 
                 <!-- boton del menu para dispositivos moviles -->
                 <button class="navbar-toggler custombotton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <!-- Logo -->
+                <a class="navbar-brand mx-sm-auto mx-md-auto mx-auto mx-md-5" href="index.html">
+                    <img src="img/main-logo1.png" alt="Logo principal Memphis Burger" style="height: 125px;">
+                </a>
 
                 <!-- menu de navegacion para pantallas grandes -->
                 <div class="collapse navbar-collapse justify-content-end mx-5" id="navbarSupportedContent">
@@ -60,14 +62,56 @@
         <!-- titulo de la pagina principal de la marca -->
         <h1>Bienvenido a Memphis Burger</h1>
         <!-- seccion para la imagen con eslogan de la marca -->
-        <section>
+        <section id="main-slogan">
             <!-- imagen con el eslogan principal de la marca -->
-            <img id="mainslogan" src="img/slogan-sample.png" alt="Eslogan principal de la marca">        
+            <img src="img/slogan-sample.png" alt="Eslogan principal de la marca">        
         </section>
-        <section>
-            <p class="centertext">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus optio nobis molestias, doloribus distinctio nostrum recusandae temporibus omnis odio repudiandae aspernatur a quod eaque eveniet exercitationem obcaecati pariatur ipsa veniam!
-            </p> 
+
+        <!-- section con objetivos, mision y vision -->
+        <section class="main-text">
+            <div>
+                <h2>
+                    Objetivos
+                </h2>
+                <h3 class="objetivo-titulo">
+                    1. Calidad y frescura:
+                </h3>
+                <p class="objetivo-texto">
+                    Garantizar que todos los ingredientes utilizados sean frescos, de alta calidad y cuidadosamente seleccionados.
+                </p>
+                <h3 class="objetivo-titulo">
+                    2. Simplicidad en el menú:
+                </h3>
+                <p class="objetivo-texto">
+                    Mantener un menú breve pero irresistible, que destaque por su autenticidad y sabor.                    
+                </p>
+                <h3 class="objetivo-titulo">
+                    3. Servicio rápido y eficiente:
+                </h3>
+                <p class="objetivo-texto">
+                    Reducir los tiempos de espera sin comprometer la calidad del producto ni del servicio.                   
+                </p>
+                <h3 class="objetivo-titulo">
+                    4. Satisfacción del cliente:
+                </h3>
+                <p class="objetivo-texto">
+                    Escuchar las necesidades y comentarios de los clientes para mejorar continuamente su experiencia.
+                </p>
+            </div>
+            <div>
+                <h2>Mision</h2>
+                <p class="center-text">
+                    Ofrecer hamburguesas estilo americano de alta calidad con un enfoque en la simpleza y el sabor auténtico, asegurando una experiencia gastronómica única gracias a un menú reducido y un servicio rápido, cálido y eficiente. Nos dedicamos a satisfacer a nuestros clientes con productos frescos, deliciosos y preparados con pasión.
+                </p>
+            </div>
+            <div>
+                <h2>
+                    Visión
+                </h2>
+                <p class="center-text">
+                    Ser reconocidos como la hamburguesería americana de referencia en nuestra región, conocida por la excelencia en el sabor, la calidad de nuestros ingredientes y una experiencia de cliente inolvidable. Queremos ser un lugar donde la gente disfrute de un producto simple pero perfecto, y que inspire fidelidad y confianza.
+                </p>
+            </div>
         </section>
      </main>
 
