Correcion de estrucura en menu.html y agregado de estilos

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -21,7 +21,7 @@
 
                 <!-- Logo -->
                 <a class="navbar-brand mx-sm-auto mx-md-auto mx-auto mx-md-5" href="../index.html">
-                    <img src="../img/main-logo1.png" alt="Logo" style="height: 125px;">
+                    <img src="../img/main-logo1.png" alt="Logo principal Memphis Burger" style="height: 125px;">
                 </a>
 
                 <!-- menu de navegacion para pantallas grandes -->
@@ -59,43 +59,66 @@
         <h1>Conoce nuestro delicioso menú</h1>
 
         <!-- item 1 del menu -->
-         <section class="menu-item">
-            <!-- imagen del item -->
-            <img src="" alt="Hamburguesa">
-            <!-- nombre del item -->
-            <h2>Item 1</h2>
-            <!-- descripcion del item -->
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem, cum eaque quidem dicta, reprehenderit soluta ipsa porro quisquam perspiciatis cumque asperiores voluptatum numquam? Ullam fugit voluptate culpa porro exercitationem?</p>
-         </section>
-         
-         <!-- item 2 del menu -->
-         <section class="menu-item">
-            <!-- imagen del item -->
-            <img src="" alt="Hamburguesa con queso">
-            <!-- nombre del item -->
-            <h2>Item 2</h2>
-            <!-- descripcion del item -->
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem, cum eaque quidem dicta, reprehenderit soluta ipsa porro quisquam perspiciatis cumque asperiores voluptatum numquam? Ullam fugit voluptate culpa porro exercitationem?</p>
-         </section>
-         
-         <!-- item 3 del menu -->
-         <section class="menu-item">
-            <!-- imagen del item -->
-            <img src="" alt="Hamburguesa con queso y panceta">
-            <!-- nombre del item -->
-            <h2>Item 3</h2>
-            <!-- descripcion del item -->
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem, cum eaque quidem dicta, reprehenderit soluta ipsa porro quisquam perspiciatis cumque asperiores voluptatum numquam? Ullam fugit voluptate culpa porro exercitationem?</p>
-         </section>
-
-         <!-- item 4 del menu -->
-         <section class="menu-item">
-            <!-- imagen del item -->
-            <img src="" alt="Hamburguesa Americana">
-            <!-- nombre del item -->
-            <h2>Item 4</h2>
-            <!-- descripcion del item -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem, cum eaque quidem dicta, reprehenderit soluta ipsa porro quisquam perspiciatis cumque asperiores voluptatum numquam? Ullam fugit voluptate culpa porro exercitationem?</p>
+         <section class="menu-burgers">
+            <div class="menu-item">
+                <!-- imagen del item -->
+                <img class="item-img" src="../img/menu1.png" alt="Cheeseburger">
+                <div class="item">
+                    <!-- nombre del item -->
+                    <h2 class="item-titulo">Cheeseburger</h2>
+                    <!-- descripcion del item -->
+                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <hr>
+                    <p class="item-option">
+                        Simple / Doble / Triple
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="menu-item-reverse">
+                <!-- imagen del item -->
+                <img class="item-img" src="../img/menu2.png" alt="Bacon Cheeseburger">
+                <div class="item">
+                    <!-- nombre del item -->
+                    <h2 class="item-titulo">Bacon Cheeseburger</h2>
+                    <!-- descripcion del item -->
+                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <hr>
+                    <p class="item-option">
+                        Simple / Doble / Triple
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="menu-item">
+                <!-- imagen del item -->
+                <img class="item-img" src="../img/menu3.png" alt="American Burger">
+                <div class="item">
+                    <!-- nombre del item -->
+                    <h2 class="item-titulo">American Burger</h2>
+                    <!-- descripcion del item -->
+                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <hr>
+                    <p class="item-option">
+                        Simple / Doble / Triple
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <div class="menu-item-reverse">
+                <!-- imagen del item -->
+                <img class="item-img" src="../img/menu4.png" alt="Chicken Burger">
+                <div class="item">
+                    <!-- nombre del item -->
+                    <h2 class="item-titulo">Chicken Burger</h2>
+                    <!-- descripcion del item -->
+                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <hr>
+                    <p class="item-option">
+                        Simple / Doble / Triple
+                    </p>
+                </div>
+            </div>
          </section>
      </main>
 
