--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,7 +20,7 @@
 
                 <!-- Logo -->
                 <a class="navbar-brand mx-sm-auto mx-md-auto mx-auto mx-md-5" href="../index.html">
-                    <img src="../img/main-logo1.png" alt="Logo" style="height: 125px;">
+                    <img src="../img/main-logo1.png" alt="Logo principal Memphis Burger" style="height: 125px;">
                 </a>
 
                 <!-- menu de navegacion para pantallas grandes -->
