Correcion de descripciones en menu y correcion de estilos

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -82,7 +82,7 @@
                     <!-- nombre del item -->
                     <h2 class="item-titulo">Bacon Cheeseburger</h2>
                     <!-- descripcion del item -->
-                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <p class="menu-description">Una explosión de sabor en cada bocado. Compuesta por nuestro blend de carne molida, queso cheddar derretido, crujientes trozos de tocino ahumado, pepinillos frescos y nuestra salsa especial de la casa, todo envuelto en un suave pan brioche dorado. Perfecta para los amantes de lo intenso y lo irresistible.</p>
                     <hr>
                     <p class="item-option">
                         Simple / Doble / Triple
@@ -97,7 +97,7 @@
                     <!-- nombre del item -->
                     <h2 class="item-titulo">American Burger</h2>
                     <!-- descripcion del item -->
-                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <p class="menu-description">La clásica y perfecta hamburguesa americana. Nuestro blend de arne molida jugosa y bien cocida, acompañada de queso cheddar derretido, frescas hojas de lechuga, rodajas de tomate perita, pepinillos crujientes y nuestra salsa especial de la casa, todo en un suave pan brioche dorado. Un clásico que nunca pasa de moda.</p>
                     <hr>
                     <p class="item-option">
                         Simple / Doble / Triple
@@ -112,7 +112,7 @@
                     <!-- nombre del item -->
                     <h2 class="item-titulo">Chicken Burger</h2>
                     <!-- descripcion del item -->
-                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                    <p class="menu-description">Nuestra opcion para los amantes del pollo frito. Pollo extra crujiente sazonado perfectamente, lechuga fresca, tomate perita en rodajas, cebolla morada y como no puede ser de otra manera, nuestra salsa especial de la casa. (Opcional con bacon)</p>
                     <hr>
                     <p class="item-option">
                         Simple / Doble / Triple
