cambio del menu usando Grid

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -58,68 +58,61 @@
         <!-- titulo de la seccion -->
         <h1>Conoce nuestro delicioso menú</h1>
 
-        <!-- item 1 del menu -->
-         <section class="menu-burgers">
-            <div class="menu-item">
-                <!-- imagen del item -->
-                <img class="item-img" src="../img/menu1.png" alt="Cheeseburger">
-                <div class="item">
-                    <!-- nombre del item -->
-                    <h2 class="item-titulo">Cheeseburger</h2>
-                    <!-- descripcion del item -->
-                    <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
-                    <hr>
-                    <p class="item-option">
-                        Simple / Doble / Triple
-                    </p>
-                </div>
+        <!-- item 1 del menu --> 
+        <section class="menu-burgers">
+            <!-- imagen del item -->
+            <img class="item-img1" src="../img/menu1.png" alt="Cheeseburger">
+            <div class="item1">
+                <!-- nombre del item -->
+                <h2 class="item-titulo">Cheeseburger</h2>
+                <!-- descripcion del item -->
+                <p class="menu-description">Una clásica cheeseburger con un pan dorado y suave, rellena de una jugosa carne de res, queso derretido, pequeños trozos de cebolla y pepinillo encurtido, mostaza y ketchup. Una burger sencilla pero tentadora, ideal para los amantes de los sabores tradicionales.</p>
+                <hr>
+                <p class="item-option">
+                    Simple / Doble / Triple
+                </p>
             </div>
-            <hr>
-            <div class="menu-item-reverse">
-                <!-- imagen del item -->
-                <img class="item-img" src="../img/menu2.png" alt="Bacon Cheeseburger">
-                <div class="item">
-                    <!-- nombre del item -->
-                    <h2 class="item-titulo">Bacon Cheeseburger</h2>
-                    <!-- descripcion del item -->
-                    <p class="menu-description">Una explosión de sabor en cada bocado. Compuesta por nuestro blend de carne molida, queso cheddar derretido, crujientes trozos de tocino ahumado, pepinillos frescos y nuestra salsa especial de la casa, todo envuelto en un suave pan brioche dorado. Perfecta para los amantes de lo intenso y lo irresistible.</p>
-                    <hr>
-                    <p class="item-option">
-                        Simple / Doble / Triple
-                    </p>
-                </div>
+            <hr class="hr-uno">
+            <!-- imagen del item -->
+            <img class="item-img2" src="../img/menu2.png" alt="Bacon Cheeseburger">
+            <div class="item2">
+                <!-- nombre del item -->
+                <h2 class="item-titulo">Bacon Cheeseburger</h2>
+                <!-- descripcion del item -->
+                <p class="menu-description">Una explosión de sabor en cada bocado. Compuesta por nuestro blend de carne molida, queso cheddar derretido, crujientes trozos de tocino ahumado, pepinillos frescos y nuestra salsa especial de la casa, todo envuelto en un suave pan brioche dorado. Perfecta para los amantes de lo intenso y lo irresistible.</p>
+                <hr>
+                <p class="item-option">
+                    Simple / Doble / Triple
+                </p>
             </div>
-            <hr>
-            <div class="menu-item">
-                <!-- imagen del item -->
-                <img class="item-img" src="../img/menu3.png" alt="American Burger">
-                <div class="item">
-                    <!-- nombre del item -->
-                    <h2 class="item-titulo">American Burger</h2>
-                    <!-- descripcion del item -->
-                    <p class="menu-description">La clásica y perfecta hamburguesa americana. Nuestro blend de arne molida jugosa y bien cocida, acompañada de queso cheddar derretido, frescas hojas de lechuga, rodajas de tomate perita, pepinillos crujientes y nuestra salsa especial de la casa, todo en un suave pan brioche dorado. Un clásico que nunca pasa de moda.</p>
-                    <hr>
-                    <p class="item-option">
-                        Simple / Doble / Triple
-                    </p>
-                </div>
+            <hr class="hr-dos">
+            <!-- imagen del item -->
+            <img class="item-img3" src="../img/menu3.png" alt="American Burger">
+            <div class="item3">
+                <!-- nombre del item -->
+                <h2 class="item-titulo">American Burger</h2>
+                <!-- descripcion del item -->
+                <p class="menu-description">La clásica y perfecta hamburguesa americana. Nuestro blend de arne molida jugosa y bien cocida, acompañada de queso cheddar derretido, frescas hojas de lechuga, rodajas de tomate perita, pepinillos crujientes y nuestra salsa especial de la casa, todo en un suave pan brioche dorado. Un clásico que nunca pasa de moda.</p>
+                <hr>
+                <p class="item-option">
+                    Simple / Doble / Triple
+                </p>
             </div>
-            <hr>
-            <div class="menu-item-reverse">
-                <!-- imagen del item -->
-                <img class="item-img" src="../img/menu4.png" alt="Chicken Burger">
-                <div class="item">
-                    <!-- nombre del item -->
-                    <h2 class="item-titulo">Chicken Burger</h2>
-                    <!-- descripcion del item -->
-                    <p class="menu-description">Nuestra opcion para los amantes del pollo frito. Pollo extra crujiente sazonado perfectamente, lechuga fresca, tomate perita en rodajas, cebolla morada y como no puede ser de otra manera, nuestra salsa especial de la casa. (Opcional con bacon)</p>
-                    <hr>
-                    <p class="item-option">
-                        Simple / Doble / Triple
-                    </p>
-                </div>
+            <hr class="hr-tres">
+            <!-- imagen del item -->
+            <img class="item-img4" src="../img/menu4.png" alt="Chicken Burger">
+            <div class="item4">
+                <!-- nombre del item -->
+                <h2 class="item-titulo">Chicken Burger</h2>
+                <!-- descripcion del item -->
+                <p class="menu-description">Nuestra opcion para los amantes del pollo frito. Pollo extra crujiente sazonado perfectamente, lechuga fresca, tomate perita en rodajas, cebolla morada y como no puede ser de otra manera, nuestra salsa especial de la casa. (Opcional con bacon)</p>
+                <hr>
+                <p class="item-option">
+                    Simple / Doble / Triple
+                </p>
             </div>
-         </section>
+            <hr class="hr-cuatro">
+        </section>
      </main>
 
      <!-- etiqueta para el pie de pagina -->
