--- a/pages/blog.html
+++ b/pages/blog.html
@@ -55,14 +55,37 @@
     <!-- contenido de la seccion Blog -->
     <main>
         <!-- secciones que contienen 2 enlaces cada uno -->
-        <section>
-            <a href=""></a>
-            <a href=""></a>
-        </section>
-        <section>
-            <a href=""></a>
-            <a href=""></a>
-        </section>
+         <div>
+            <h1>Blog Home</h1>
+         </div>
+         <section class="blog-section">
+            <div>
+                <div>
+                    <a href="https://www.forbesargentina.com/lifestyle/burgerpalusa-2024-festival-hamburguesas-llega-hipodromo-palermo-n58945"><img class="img-blog" src="../img/blog1.png" alt="Imagen relacionada a la noticia numero 1"></a>
+                    <p><a href="https://www.forbesargentina.com/lifestyle/burgerpalusa-2024-festival-hamburguesas-llega-hipodromo-palermo-n58945">BurgerPalusa 2024: el festival de hamburguesas llega al Hipódromo de Palermo</a></p>                  
+                </div>
+                <hr>
+                <div>
+                    <a href="https://www.elpais.com.uy/el-empresario/la-avanzada-de-las-hamburgueserias-gourmet-uruguayas-gana-clientes-suma-aperturas-y-mira-al-exterior#google_vignette"><img class="img-blog" src="../img/blog2.png" alt="Imagen relacionada a la noticia numero 2"></a>
+                    <p><a href="https://www.elpais.com.uy/el-empresario/la-avanzada-de-las-hamburgueserias-gourmet-uruguayas-gana-clientes-suma-aperturas-y-mira-al-exterior#google_vignette">La avanzada de las hamburgueserías gourmet uruguayas gana clientes, suma aperturas y mira al exterior</a></p>                     
+                </div>
+            </div>
+            <hr>
+            <div>
+                <div>
+                    <a href="https://www.forbesargentina.com/negocios/sus-hamburguesas-llegaron-miami-espera-facturar-65-millones-n19017"><img class="img-blog" src="../img/blog3.png" alt="Imagen relacionada a la noticia numero 3"></a>
+                    <p><a href="https://www.forbesargentina.com/negocios/sus-hamburguesas-llegaron-miami-espera-facturar-65-millones-n19017">Sus hamburguesas llegaron a Miami y espera facturar $ 65 millones</a></p>                  
+                </div>
+                <hr>
+                <div>
+                    <a href="https://es.rollingstone.com/burger-kid-de-comer-en-youtube-a-abrir-su-propio-local-pasion-por-la-hamburguesa/"><img class="img-blog" src="../img/blog4.png" alt="Imagen relacionada a la noticia numero 4"></a>
+                    <p><a href="https://es.rollingstone.com/burger-kid-de-comer-en-youtube-a-abrir-su-propio-local-pasion-por-la-hamburguesa/">Burger Kid, de comer en YouTube a abrir su propio local: pasión por la hamburguesa</a></p>                     
+                </div>
+            </div>
+            <div class="blog-search">
+                <a href="https://www.google.com/search?q=cultura+hamburguesera&sca_esv=7e1bbdf5a909f35f&biw=1920&bih=919&tbm=nws&sxsrf=AHTn8zpmRj8uya3-rwQEydAChr1h7KtSxQ%3A1738797197185&ei=jfCjZ9-LC5Cd5OUP_dyH4AI&ved=0ahUKEwifhpmq1K2LAxWQDrkGHX3uASwQ4dUDCA4&uact=5&oq=cultura+hamburguesera&gs_lp=Egxnd3Mtd2l6LW5ld3MiFWN1bHR1cmEgaGFtYnVyZ3Vlc2VyYTIFEAAYgAQyBRAAGO8FMggQABiABBiiBEiVCVDQAVjGA3AAeACQAQCYAXSgAaICqgEDMi4xuAEDyAEA-AEBmAIDoAKtAsICBRAhGKABwgIGEAAYFhgemAMAiAYBkgcDMi4xoAe3Bw&sclient=gws-wiz-news">Mas noticias de la cultura hamburguesera...</a>
+            </div>
+         </section>
     </main>
 
     <!-- etiqueta para el pie de pagina -->
