estilos de pagina contacto con SASS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,23 +55,26 @@
     <!-- contenido principal de la seccion -->
      <main>
         <section>
-            <!-- etiqueta que contiene el formulario para envio de mensajes -->
-            <form action="">
-                <p>
-                    <label for="">Nombre:</label><br>
-                    <input type="text">
-                </p>
-                <p>
-                    <label for="">Asunto:</label><br>
-                    <input type="text">                    
-                </p>
-                <p>
-                    <label for="">Escriba su mensaje aqui:</label><br>
-                    <Textarea placeholder="Escriba tu mensaje"></Textarea>
-                </p>
-                <!-- boton que envia el formulario -->
-                <input type="submit">
-            </form>
+            <div>
+                <!-- etiqueta que contiene el formulario para envio de mensajes -->
+                <form action="">
+                    <div>
+                        <label for="">Nombre:</label>
+                        <input type="text">
+                    </div>
+
+                    <div>
+                        <label for="">Asunto:</label>
+                        <input type="text">                    
+                    </div>
+                    <div>
+                        <label for="">Escriba su mensaje aqui:</label>
+                        <Textarea placeholder="Escriba tu mensaje"></Textarea>
+                    </div>
+                    <!-- boton que envia el formulario -->
+                    <input class="submit-button" type="submit">
+                </form>                
+            </div>
         </section>
      </main>
 
