correcion clase en pagina contacto que modificaba estilos en otra pagina

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
     
     <!-- contenido principal de la seccion -->
      <main>
-        <section>
+        <section class="form-contacto">
             <div>
                 <!-- etiqueta que contiene el formulario para envio de mensajes -->
                 <form action="">
