--- a/index.html
+++ b/index.html
@@ -57,10 +57,30 @@
         <!-- titulo de la pagina principal de la marca -->
         <h1>Bienvenido a Memphis Burger</h1>
         <!-- seccion para la imagen con eslogan de la marca -->
-        <section id="main-slogan">
-            <!-- imagen con el eslogan principal de la marca -->
-            <img src="img/slogan-sample.png" alt="Eslogan principal de la marca">        
-        </section>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/img/slogan-sample.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/slogan-sample2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/slogan-sample3.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/img/slogan-sample4.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
 
         <!-- section con objetivos, mision y vision -->
         <section class="main-text">
