correccion de rutas de imagenes carrousel

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/img/slogan-sample.png" class="d-block w-100" alt="...">
+                <img src="img/slogan-sample.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/slogan-sample2.png" class="d-block w-100" alt="...">
+                <img src="img/slogan-sample2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/slogan-sample3.png" class="d-block w-100" alt="...">
+                <img src="img/slogan-sample3.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/img/slogan-sample4.png" class="d-block w-100" alt="...">
+                <img src="img/slogan-sample4.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
