--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -103,7 +103,7 @@
 
     <!-- etiqueta para el pie de pagina -->
     <footer>
-        <p>Contacto: <a href="mailto:contacto@memphisburger.com">contacto@memphisburger.com</a></p>        
+        <p>Todos los derechos reservados. Contacto: <a href="mailto:contacto@memphisburger.com">contacto@memphisburger.com</a></p>         
     </footer>
 
      <!-- script de js -->
