--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- menu de navegacion -->
     <header>
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid d-flex align-items-center">
+            <div class="container-fluid d-flex align-items-center justify-content-end">
                 <!-- boton del menu para dispositivos moviles -->
                 <button class="navbar-toggler custombotton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
